本地事务-分布式事务-分布式锁

--- a/其他/记录.md
+++ b/其他/记录.md
@@ -1465,4 +1465,646 @@ public AccessTokenVo refresh(String refreshToken,Integer type) {
 4. 讲一下你们的认证授权的总体流程?
    - 首先用户在前端发起表单登录,然后此时就会请求到我们认证服务中,我们拿到账号和密码去通过SpringSecurity去进行认证的一个流程(通过loginDetailService查询),此时我们能拿到用户的权限等信息,然后根据后台自己定义的clientID去客户端参数详情表中查询生成token所需要的参数,然后根据秘钥将权限和参数生成一个密文,这个密文就是token,然后将这个token返回给客户端进存储
    - 访问资源服务的时候就会携带这个token,然后在资源服务中根据生成token相同的密文进行令牌转换器解析,通过解析后得到权限信息, 进行校验SourceID和scope,如果满足就执行下一步,然后访问到具体的方法上的security的权限注解,那么此时就会进入security的授权的流程,如果满足这个权限就会开放资源,如果不满足那么就会直接拒绝访问!
-   - 
+
+## 11. 事务
+
+### 11. 1 事务基本概念
+
+事务具有四个特性(简称ACID原则):
+
+1. 原子性
+   - 不可分割，指一个事务就是一个整体无法分割的独立单元，不允许部分成功部分失败！
+   - 利用InnoDb的undo log,会记录这些回滚需要的信息，当事务执行失败或调用rollback，导致事务需要回滚，就可以利用undo log中的信息将数据回滚到修改之前的样子。
+   
+2. 一致性（基于其他三个）
+
+   - 一致性要求写到数据库的数据都必须满足于预先定义的规则，可以理解为写之前和写入数据库的数据要达到一致！
+   - 当然如果我们满足其他三个原则那么自然也就达到了一致性！
+
+3. 持久性
+
+   - redo log实现了事务的持久性
+   - redo log记录的是新数据的备份，在事务提交之前，只要将Redo Log持久化即可，注意不需要将数据持久化，也就是说当系统发生崩溃的时候，虽然数据没有持久化但是redo log已经持久化了，系统就可以根据redo log中的内容，将所有数据恢复到最新的状态！
+
+   ```java
+   Undo+ Redo事务的简化过程
+   A.事务开始. 
+   B.记录A=1到undo log. 
+   C.修改A=3. 
+   D.记录A=3到redo log. 
+   E.记录B=2到undo log. 
+   F.修改B=4. 
+   G.记录B=4到redo log. 
+   H.将redo log写入磁盘。 
+   I.事务提交
+   ```
+
+   通过undo保证事务的原子性，redo保证持久性。
+
+   4. 隔离性
+
+      - 隔离性要求如果两个事务修改同一个数据，则必须按顺序执行，并且前一个事务如果未完成，那么未完成的中间状态对另一个事务不可见
+
+      ---
+
+   四种隔离级别:
+
+   1.  读未提交
+   2. 读已提交
+   3. 可重复读
+   4. 串行化
+
+   以上的隔离级别都要解决的问题:
+
+   1. 脏读(一般读未提交会出现这类问题)
+
+      ```
+      脏读指的是读到了其他事务未提交的数据,未提交也就意味着这些数据都有可能出现回滚,那么也就是说读到了不存在的数据
+      解决办法:
+      set global transaction isolation level read committed
+      但是无法解决重复读和解决不了幻读
+      ```
+
+   2. 不可重复读(一般读已提交会出现这类问题)
+
+      ```
+      同一个事务中多次使用相同条件读取到的数据是不一样的,也就是说其他事务有可能使用update修改了数据造成两次或多次读到的数据都是不一致的!
+      解决办法:
+      set global transaction isolation level repeatable read
+      但是无法解决幻读问题
+      ```
+
+   3. 幻读(一般重复读就可能出现这类问题)
+
+      ```
+      事物A两次读取相同条件的数据读到的条数不一样
+      解决办法:
+      事务A两次读取读取到了不同的数据条数，这个就是幻读，但是当你在 MySQL 中测试幻读的时候，并不会出现这类问题，幻读并没有发生，因为MySQL 的可重复读隔离级别其实解决了幻读问题，它使用到了“间隙锁”。
+      ```
+
+   4. 丢失更新
+
+      ```
+      1. 回滚丢失: 如两个事务同时修改同一条数据,事务A完成了修改,事务B遇到突然情况进行回滚那么就会将事务A的修改数据进行回滚丢失
+      2. 覆盖丢失: 如两个事务同时修改同一条数据,事务A完成了修改,事务B再次修改并提交那么就有可能出现事务B的结果就会去覆盖事务A的结果
+      ```
+
+串行化:
+
+​	串行化是4种事务隔离级别中隔离效果最好的，解决了脏读、可重复读、幻读的问题，但是效果最差，它将事务的执行变为顺序执行，与其他三个隔离级别相比，它就相当于单线程，后一个事务的执行必须等待前一个事务结束
+
+注意: MySQL事务隔离依靠的是锁来实现的! 
+
+**MVCC机制**
+
+MVCC的全称是"多版本并发控制"，一个行记录数据有多个版本对快照数据，这些快照数据在undo log中。 如果一个事务读取的行正在做DELELE或者UPDATE操作，读取操作不会等行上的锁释放，而是读取该行的快照版本；
+
+**可重复读**是在事务开始的时候生成一个当前事务全局性的快照，而**读已提交**则是每次执行读语句的时候都重新生成一次快照
+
+![image-20211210195915446](https://gitee.com/miawei/pic-go-img/raw/master/imgs/image-20211210195915446.png)
+
+
+
+
+
+
+
+### 11.2 分布式解决方案
+
+#### 1. 2PC
+
+1. ### XA规范
+
+   XA协议采用两阶段提交方式来管理分布式事务采用两阶段提交 2PC（Two Phase Commitment Protocol）来管理分布式事务，所谓二阶段是有两个阶段组成，一阶段投票阶段和二阶段提交阶段。同时它是由“事务协调器”和若干“事务执行者”两个角色组成
+
+   第一阶段：投票阶段
+
+   ![在这里插入图片描述](https://gitee.com/miawei/pic-go-img/raw/master/imgs/20200426141815981.png)
+
+解读：首先事务协调器会往所有的事务参与者发起提交请求（询问是否准备OK），那么此时事务参与者就会执行事务操作，就会将旧数据写入到Undo log然后将新的数据写入redo log,然后此时先不会执行持久化到数据库磁盘，然后这些操作准备ok那么就会给事务协调器返回准备ok！
+
+​	第二阶段：提交阶段
+
+![在这里插入图片描述](https://gitee.com/miawei/pic-go-img/raw/master/imgs/20200426141950337.png)
+
+正常流程：当所有的事务参与者都准备OK了，那么事务协调器就会执行提交事务的指令那么参与者接收到指令就会将redo log中的数据写入到磁盘数据库中！
+
+回滚流程：
+
+![在这里插入图片描述](https://gitee.com/miawei/pic-go-img/raw/master/imgs/20200426142424513.png)
+
+当事务参与者操作失败就会给事务协调器恢复不OK，那么此时事务协调器就会给其他事务参与者发送rollback指令说大家都散了吧今天这事搞不成了。然后此时其他参与者接收到指令后就把undo log中的回滚信息进行回滚!
+
+2. ### Seata
+
+Seata 的设计思路是将一个分布式事务可以理解成一个全局事务，下面挂了若干个分支事务，而一个分支事务是一个满足 ACID 的本地事务，因此我们可以操作分布式事务像操作本地事务一样。
+
+全局事务执行流程如下:
+
+![Seata执行流程](https://gitee.com/miawei/pic-go-img/raw/master/imgs/20200428003910751.png)
+
+理解: 
+
+1. TC事务协调器是一个独立的服务我们需要先启动它,他是负责维护全局事务的运行状态,根据TM的指令来对全局事务的提交或回滚!
+2. RM资源管理器这个呢就好比是我们需要事务的服务(理解为这个被调用的服务需要开启事务)
+3. TM事务管理器只是负责开启一个全局事务,用于通知TC去提交或者回滚事务! (理解为这也是服务由它主动发起事务)
+
+执行流程:
+
+	1. 系统启动TM事务管理者以及RM资源管理者需要向事务协调器进行`提交注册`---可以看做这是一种初始化!
+	1. 在事务管理器的主业务方法上打上@GlobalTransationl注解，通过这个注解,事务管理器会向TC申请`开启一个全局分布式事务`,然后TC返回一个全局唯一的XID，这个XID就会在涉及微服务的整个全局事务的上下文中进行传播！
+	1. 业务开始, 事务管理器通过Feign去调用Order，并传递全局事务XID，然后Order在做修改操作的时候就会往事务协调器TC注册本地分支事务（通过代理DataSource向TC发起分支事务注册的），该分支事务归属于相同XID的全局事务，然后协调者TC返回一个分支事务ID;
+	1. 这个时候Order就会正常写数据库，然后会写入一个undo log，然后提交分支事务，最后向TC上报事务处理状态。
+	1. 当order调用完成以后，代码回到事务管理器然后就会往TC事务协调者发起全局事务提交请求，TC向RM事务分支发起事务提交请求，RM直接删除undo log日志文件即可，因为之前就已经提交了事务
+
+理解：
+
+TM: 发起事务的地方
+
+RM:接收事务的地方
+
+TC: 独立服务,可理解为协调全局事务的组件而已!
+
+1. 首先TM和RM都启动第一件事就是先往TC进行注册。
+2. 然后TM在主事务方法上需要打一个@GlobalTransational注解，这个注解就往TC申请开启全局分布式事务，开启成功就会返回一个全局唯一的XID。
+3. 第三步就开始执行事务方法中的业务逻辑，然后就会通过Feign去调用RM，然后RM就会往TC注册本地分支事务，而这个分支事务也归属到相同XID的全局事务中（是通过代理DataSource进行发起分支事务注册），
+4. 第四步RM就会正常执行将数据写入到数据库，不过先将数据先写入到undo log中用于回滚的时候好恢复，然后将数据写入到数据库后就提交分支事务然后向TC上报事务处理状态！
+5. 第五步执行完毕之后就会一路回到TM事务发起方法这里，此时TM就会向TC发起全局事务提交请求，TC呢就往注册的分支事务发起提交请求，如果执行都ok那么RM就会删除undo log日志文件，因为这个时候就已经提交了本地事务！
+
+失败的情况：
+
+![在这里插入图片描述](https://gitee.com/miawei/pic-go-img/raw/master/imgs/20200428003944632.png)
+
+理解： 在之前的步骤中在RM中会去写入到数据库中，如果此时出现异常情况那么就会将异常情况上报给TC，然后一路返回到TM，TM收到之后就会往TC发起一个全局性事务的回滚请求，而此时RM收到TC发起的回滚指令后就会去解析undo log把数据还原到之前，删除undo log提交本地事务！
+
+
+
+
+
+
+
+
+
+
+
+#### 2. TCC
+
+理解：按照事先预定的方案去执行，如果失败了就走补偿方案(撤销)
+
+- Try : try的意思是尝试，其实这个步骤是用来做业务的预处理，可以理解为是做一些准备工作，等到Confirm之后这些操作才算成功。
+- Confirm ：确认，如果所有的事务参与者都try成功，执行commit对业务做提交操作，或者可以理解成对try的工作作出确认。
+- Cancel：取消，如果try失败需要回滚，即取消try的预处理操作
+
+正常流程：
+
+![在这里插入图片描述](https://gitee.com/miawei/pic-go-img/raw/master/imgs/20200428203908312.png)
+
+回滚流程：
+
+![在这里插入图片描述](https://gitee.com/miawei/pic-go-img/raw/master/imgs/20200428203855256.png)
+
+#### 3. MQ消息最终一致性
+
+![在这里插入图片描述](https://gitee.com/miawei/pic-go-img/raw/master/imgs/20200428213448353.png)
+
+大致流程是：
+
+1.主业务方向发送一个“Prepared”消息到MQ，这个消息还未被确认，然后主业务方执行自己的业务，并提交本地事务，成功后向MQ确认之前的“Prepared”消息。
+
+2.消息接受者方收到消息后执行业务逻辑，提交本地事务，然后做一个消息签收，如果消费者消息接受失败会进行重试，保证消息最终被消费。
+
+
+
+那么这种最终消息一致性指数据只是最终的一致性, 有可能是一个小时之后也有可能是一天之后,总之最终达到一致性的原则!
+
+#### 4. 最大努力通知
+
+最大努力通知服务表示在不影响主业务的情况下，尽可能地确保数据的一致性。它需要开发人员根据业务来指定通知规则，在满足通知规则的前提下，`尽可能`的确保数据的一致，以达到最大努力的目的。
+
+场景: 支付宝结果通知
+
+
+
+最大努力通知与可靠消息一致性有什么不同 ?
+
+1. 可靠消息最终一致性
+
+   ```
+   系统A本地事务执行成功，通知系统B处理任务，通常通过MQ实现。一般适用于平台内部，对一	致性要求相对较高(微服务的2个子系统之间)
+   ```
+
+2. 最大努力通知
+
+   ```
+   所谓最大努力通知就是系统A用最大努力通知系统B，能不能成功，不做完全保证，如果没通知到位，	系统B可以主动来调用系统A的接口查询结果状态。一般适用于跨平台业务，或对接了上方平台的业务场景(支付结果通知)
+   ```
+
+#### 5. 总结
+
+![image-20211210194540187](https://gitee.com/miawei/pic-go-img/raw/master/imgs/image-20211210194540187.png)
+
+需要注意的地方是
+
+1. 2PC是有两个方案一个是XA一个是Seata,
+   - XA是基于数据库层面的, 在准备阶段就会写undo log 日志和redo log日志但是还未提交处于等待状态，然后需要事务协调器来发起提交指令才会将redo log 中的数据写入到磁盘中，这种会锁定资源时间较长，如果其中响应时间较长那么就会造成事务的阻塞，性能也不好！
+   - Seata是基于应用层面的，它呢执行的时候只写入一个undo log回滚日志，而数据就写入到数据库，然后上报状态后续如果正常执行就删除undo log日志，如果非正常那么就会利用undo log 进行回滚恢复数据。这种方案呢在第一阶段就提交了事务，性能较好！
+2. TCC：是一种补偿性的，弱一致性事务方案
+   - 这种也有一个准备-提交-取消这三个阶段，只不过这个呢区别比较大， 这个对代码的侵入性比较强会去调用各种各样的接口
+3. 最终一致性：不要求数据的强一致性但是最终你得给我一致！
+   - 消息重复消费和可靠消费：将消息保存在数据库表中，然后记录状态然后通过定时器去定时检索去发送消息到MQ中，MQ接收那一方就会执行业务保证最终一致性，当然存在失败的情况，那么定时器也会去检索再一次发送等等！
+4. 最大努力通知：顾名思义尽可能尽努力，不保证一致性！
+
+
+
+### 11.3 分布式锁
+
+#### 1. 概念
+
+为什么需要分布式锁：
+
+1. 单体项目：在单进程（启动一个jvm）的系统中，当存在多个线程可以同时改变某个变量（可变共享变量）时，就需要对变量或代码块做同步!---在java中可以通过synchronize和lock等手段来实现
+2. 分布式项目:
+   - 问题: 
+     - 分布式与单机情况下最大的不同在于其不是多线程而是`多进程`
+     - 多线程由于可以共享堆内存，因此可以简单的采取内存作为标记存储位置。而进程之间甚至可能都不在同一台物理机上，因此需要将标记存储在一个所有进程都能看到的地方
+   - 解决办法:
+     - 分布式锁作用就是在分布式系统，保证某个方法只能在同一时间某个进程的某个线程执行。在整个分布式环境下都只有一份! --------- `锁是多个进程共享的`
+
+总结: 就是在在分布式环境下，保证某个公共资源只能在同一时间被多进程应用的某个进程的某一个线程访问时使用锁
+
+
+
+重复锁: 允许同一个线程多次获取同一把锁: 如递归函数内有加锁操作
+
+自旋锁: 一个线程获取一把锁的时候,这个锁已经被占用了那么此时就会进入阻塞等待状态，并等待一段时间后再次尝试获取的状态！ 
+
+
+
+分布式锁的三种方式：
+
+1. 基于数据库操作
+2. 基于redis缓存操作
+3. 基于zookeeper临时顺序节点+watch
+
+#### 2.数据库
+
+1. 行锁(默认操作)
+
+   - 共享锁: 在进行读操作的时候，共享锁与共享锁之间会进行兼容，允许多个事务同时获取该锁
+
+   - 排它锁：在进行写操作的时候，排它所是具有互斥的作用，也就是当一个事务获取锁的时候是不行允许其他事务获取锁，也即是说不存在不兼容的情况！
+
+   - 如果我们想要再查询的时候修改的排他锁那么我们可以这样做:
+
+     ```mysql
+     select * from table where xx = yy for update   
+     ```
+
+   **悲观锁--For Update**
+
+   ```java
+   public interface GoodsMapper {
+        @Update("update t_goods set count=count-#{num} where id = #{id}")
+        void updateNum(Map<String,Object> params);
+   
+        @Select("select * from t_goods where id = #{id} for update")
+        Goods laodById(Long id);
+   }
+   ```
+
+   就是通过For Update的思想在查询对象的时候就加锁，其他线程在查询的时候就必须等待，性能太差！
+
+   这样虽然也能实现分布式锁的效果，但是性能差容易出现性能瓶颈
+
+   好处：简单易用，好理解，保障数据强一致性
+
+   缺点：
+
+   1. select 的 for update 操作是基于间隙锁（gap lock） 实现的，是一种悲观锁的实现方式，所以存在阻塞问题
+   2. 高并发情况下，大量请求进来，会导致大部分请求进行排队，影响数据库稳定性，也会耗费服务的CPU等资源
+   3. 当获得锁的客户端等待时间过长时，会提示：[40001][1205] Lock wait timeout exceeded; try restarting transaction,高并发情况下，也会造成占用过多的应用线程，导致业务无法正常响应
+   4. 如果优先获得锁的线程因为某些原因，一直没有释放掉锁，可能会导致死锁的发生
+   5. 锁的长时间不释放，会一直占用数据库连接，可能会将数据库连接池撑爆，影响其他服务
+   6. MySql数据库会做查询优化，即便使用了索引，优化时发现全表扫效率更高，则可能会将行锁升级为表锁，此时可能就更悲剧了
+   7. 不支持可重入特性，并且超时等待时间是全局的，不能随便改动
+
+   **乐观锁-不上锁**
+
+   直接用:表中添加一个时间戳或者版本号的字段来实现，`update account set version = version + 1 where id = #{id} and version = #{oldVersion} `当更新不成功，客户端重试，重新读取最新的版本号或时间戳，再次尝试更新，类似 CAS 机制，推荐使用
+
+​		实际代码中可以写个while循环不断重试，版本号不一致，更新失败，重新获取新的版本号，直到更新成功。
+
+理解: 其实就是用一个版本号来假设这个数据没有被别人修改过!
+
+​		**基于数据库主键实现分布式锁**
+
+​		意思就是通过一个表的主键这个特性(主键是唯一不重复的特性)，如果有多个请求同时提交到数据库的话，数据库会保证只有一个操作可以成功，那么我们就可以认为操作成功的那个线程获得了该方法的锁，当方法执行完毕之后，想要释放锁的话，删除这条数据库记录即可
+
+![image-20211210203230586](https://gitee.com/miawei/pic-go-img/raw/master/imgs/image-20211210203230586.png)
+
+​	**基于唯一索引实现分布式锁**
+
+​	其实这个的意思跟上面也是一样的，都是利用了唯一性来进行上锁！ 
+
+#### 3. Redis
+
+​	实现分布式锁的原理也很简单，就是需要得有一把唯一且共享的锁，多个服务同时去获取锁，但是只有一个服务才能获取到锁，其他没有获取到锁的服务需要等待或者自旋，等获取到锁的服务业务执行完成释放锁，其他的服务就可以再次尝试获取锁。
+
+步骤：
+
+1. 加锁-释放锁：
+
+   ```
+   我们可以使用redis的指令setnx,这个指令的好处就在于只有目标key不存在那么才会创建值, 如果存在那么就不做任何操作
+   执行业务逻辑后在执行del指令就删除该key
+   ```
+
+2. 锁超时:
+
+   ```
+   在释放锁的阶段的时候如果出现宕机那么这个锁就会容易造成永远释放不了,出现死锁的一个状况!
+   我们可以使用Redis的 expire（lock_stock，30）命令实现,即使宕机那么也可以出现key的自动删除
+   ```
+
+3. 原子性问题:
+
+   ```java
+   如果出现极端问题,如果setnx上锁操作还未来得及expire设置过期时间,那么就宕机了,那么我们可以就需要保证一个setnx和expire的原子性
+   SET key value [EX seconds] [PX milliseconds] [NX|XX]
+   如:
+   if（set(lock_stock,1,"NX","EX",5) == 1）{	//获取锁并设置超时
+       try {
+           业务代码
+       } finally {
+           del（lock_stock）			 		//释放锁
+       }
+   }
+   ```
+
+4. 锁误删问题:
+
+   ```java
+   还有一种情况: 如果服务A在执行代码的期间因为执行较长然后key就自动过期了,然后执行到del()删除key的时候由于其他服务进来了,那么此时就会出现删除其他服务锁的一个情况发生!
+   解决办法:
+   我们可以在删除锁的时候先判断一下要删除的锁是不是自己上的锁，比如可以把锁的值使用一个UUID，在释放锁的时候先获取一下锁的值和当前业务中创建的UUID是不是同一个，如果是才执行·del删除锁，当然也可以使用线程的ID替代UUID
+   如:
+   String uuid = UUID.randomUUID().toString();
+   if（jedis.set(lock_stock,uuid,"NX","EX",5) == 1）{	//获取锁并设置超时
+       try {
+           业务代码
+       } finally {
+           String lockValue = jedis.get(lock_stock);	//获取锁的值
+           if(lockValue.equals(uuid)){			//判断是不是自己的锁
+               jedis.del（lock_stock）			 	  //释放锁
+           }
+       }
+   }
+   ```
+
+5. 第二轮误删问题:
+
+   ```java
+   这里误删和判断锁不是原子性的,也就是说容易出现服务A在获取锁判断也是当前锁的情况下,走到if里面准备删key的时候,突然key就突然过期了,那么此时别的服务又挤进来了,此时就容易出现误删其他服务锁的问题,那么我们就需要保证这组操作保证一个原子性问题!
+   Lua脚本:
+   String uuid = UUID.randomUUID().toString();
+   if（jedis.set(lock_stock,uuid,"NX","EX",5) == 1）{	//获取锁并设置超时
+       try {
+           业务代码
+       } finally {
+           //lua脚本
+           String script = "if redis.call('get', KEYS[1]) == ARGV[1] then return redis.call('del', KEYS[1]) else return 0 end";
+           //执行脚本
+           jedis.eval(script, Collections.singletonList("lock_stock"),Collections.singletonList(uuid));
+       }
+   }
+   ```
+
+6. 完整代码:
+
+   ```java
+   上面假如服务A获取锁进去了而服务B获取锁失败了,那么是不是就这样算了,这是不行的,我们需要让他等待片刻再次获取锁
+   public void method(){
+   	String uuid = UUID.randomUUID().toString();
+   	if（jedis.set(lock_stock,uuid,"NX","EX",5) == 1）{	//获取锁并设置超时
+   	    try {
+   	        业务代码
+   	    } finally {
+   	        //lua脚本
+   	        String script = "if redis.call('get', KEYS[1]) == ARGV[1] then return redis.call('del', KEYS[1]) else return 0 end";
+   	        //执行脚本
+   	        jedis.eval(script, Collections.singletonList("lock_stock"),Collections.singletonList(uuid));
+   	    }
+   	}else{
+   		//休眠一会儿，重入方法，尝试获取锁
+   		Thread.sleep(100);
+   		method();	//自旋，重新进入方法
+   	}
+   }
+   ```
+
+理解: 在redis中使用分布式锁就是采用的setnx的方式, 首先会通过UUID来作为锁的value，这样就能保证跟别的服务不是同一把锁造成的误删问题，因为容易出现瞬间并发情况都是同时进入到if判断中， 然后通过固定的key的名称去设置新的value，如果这个key还存在那么就说明这个锁是有人的，那么就会进入休眠状态然后再一次尝试获取锁，而执行if中的组合命令也就意味着能够保证set和设置过期是同时发生的，然后执行完代码那么最终也是会通过原子性lua脚本去获取锁然后判断跟当前的uuid作为的value是否一样，如果不一样那么就不执行删除操作，因为我认为这锁已经过期了已经是别人的锁了！
+
+为什么要设置uuid作为value？
+
+​	因为在执行删除锁的操作的时候容易出现当前锁过期而别的服务进来那么就删除的是其他服务的锁，毕竟redis中删除key会将这个key删除，所以这个时候就需要来判断value表示是否是当前锁
+
+----
+
+**Redisson实现分布式锁**
+
+它呢就是封装了我们上面的细节问题,从而让开发变得更简单!
+
+如: 
+
+1. 一个简单的分布式锁案例:
+
+   ```java
+    	@Test
+       public void testLock2(){
+       
+           RLock rLock = redissonClient.getLock("lock_stock");
+       	// 加锁以后10秒钟自动解锁
+   		// 无需调用unlock方法手动解锁
+   		rLock.lock(10, TimeUnit.SECONDS);
+           try{
+               System.out.println("加锁成功....");
+               System.out.println("执行业务....");
+           }finally {
+               rLock.unlock();
+               System.out.println("释放锁....");
+           }
+       }
+   
+   ```
+
+   Redisson对分布式锁实现细节进行了封装，帮我们处理了分布式锁面临的一些列问题，那么Redisson是如何工作的呢？？？
+
+   1. 如果没有设置过期时间，Redisson以 30s 作为锁的默认过期时间，获取锁成功后(底层也用到了Lua脚本保证原子性)`会开启一个定时任务定时进行锁过期时间续约，即每次都把过期时间设置成 30s，定时任务 10s执行一次(看门狗)`
+   2. 如果设置了过期时间，直接把设定的过期时间作为锁的过期时间，然后使用Lua脚本获取锁，没获取到锁的线程会while自旋重入不停地尝试获取锁，当然指定了解锁时间，Redisson就不会再自动续期，那么如果在线程A业务还没执行完就自动解锁了，这时候线程B获取到锁，继续执行业务，那么等线程A业务执行完释放锁就可能会把线程B的锁删除，当然这种情况Redisson会`报异常`，但是这种情况是没有把所有线程都锁住的，所以如果要`手动设定过期时间需要让过期时间比业务逻辑执行的时间长才对`!
+
+   **信号量**
+
+​	信号量可以看做是在Redis中保存了一个数字，然后可以实现原子性的加或者减，比如说有一商品需要拿100个做秒杀，我们就可以把这个库存数量做成信号量，然后实现`原子性加减操作`!
+
+```java
+@Test
+public void testReadLock5() throws InterruptedException {
+    //获得到一个信号量
+    RSemaphore semaphore = redissonClient.getSemaphore("semaphore");
+    //设置信号量的值
+    boolean setPermits = semaphore.trySetPermits(1000);
+    System.out.println(setPermits);
+    System.out.println("可用数量："+semaphore.availablePermits());
+
+}
+@Test
+public void testReadLock6() throws InterruptedException {
+    //获得到一个信号量
+    RSemaphore semaphore = redissonClient.getSemaphore("semaphore");
+    //获取 2 个信号量 ， 值会减去 2 ， 如果获取不到，方法会阻塞
+    semaphore.acquire(2);
+    System.out.println("可用数量："+semaphore.availablePermits());
+
+    //尝试获取 2 个信号量 ， 值会减去 2 ， 如果获取不到，方法不会
+    boolean tryAccquireSuccess = semaphore.tryAcquire(2);
+    System.out.println(tryAccquireSuccess);
+    System.out.println("可用数量："+semaphore.availablePermits());
+
+}
+
+@Test
+public void testReadLock7() throws InterruptedException {
+    //获得到一个信号量
+    RSemaphore semaphore = redissonClient.getSemaphore("semaphore");
+    //释放2个值，数量会加回去
+    semaphore.release(2);
+    System.out.println("可用数量："+semaphore.availablePermits());
+}
+
+```
+
+理解: 这个信号量它呢我们一般用于秒杀的超卖问题，也就是说这个他能保证库存数量做为一个原子性操作，也就是说不会出现原本卖5件结果超卖到6件问题！
+
+
+
+#### 4.zookeeper
+
+这个我就不做笔记了，因为不会，即使做笔记也说不好！
+
+节点分类：
+
+1. 持久节点
+   - 节点创建后，就一直存在，直到有删除操作来主动清除这个节点
+2. 持久顺序节点
+   - 父节点会为他的第一级子节点维护一份时序，会记录每个子节点创建的先后顺序
+   - ZK会自动为给定节点名加上一个数字后缀，作为新的节点名。这个数字后缀的范围是整型的最大值
+3. 临时节点
+   - 客户端会话失效，那么这个节点就会自动被清除掉
+   - 在临时节点下面不能创建子节点
+4. 临时顺序节点
+   - 在临时节点的基础上增加了顺序，可以用来实现分布式锁
+
+
+
+![image-20211210211736705](https://gitee.com/miawei/pic-go-img/raw/master/imgs/image-20211210211736705.png)
+
+
+
+#### 5.总结
+
+![image-20211210211603900](https://gitee.com/miawei/pic-go-img/raw/master/imgs/image-20211210211603900.png)
+
+
+
+## 12. 秒杀
+
+秒杀问题解决方案:
+
+#### 1.1.静态资源加速
+
+- 页面静态化&动静分离
+
+我们从前端说起，秒杀意味着大用户量和高并发请求，对于商品秒杀详情页来说页面的数据加载会给服务器带来很大的压力，可以把秒杀详情页静态化，反正这个页面的大部分`数据都是固定不变的`，然后把静态资源部署到`Nginx实现动静分离`
+
+- CDN静态资源加速
+
+页面静态化+动静分离后，客户端直接从Nginx访问完整的静态页面，无需再发送Ajax请求从后端加载动态数据，减轻了服务器压力，提高了页面响应速度，这里可以进一步优化，就是将静态资源缓存起来，比如静态资源上CDN后，客户端可以`从最近的CDN服务器节点获取静态资源`，加快响应速度
+
+#### 2.2.流量控制
+
+- 前端流控
+
+秒杀系统的并发非常的高，然后能够秒杀到商品的请求是很少的，大部分的请求都是无效的请求，我们需尽可能的减少没不要的流量，前端限流指的是从前端限制请求的并发量
+
+1. `随机丢弃请求`
+
+   当用户进行秒杀，先在前端产生随机数，如果随机数满足某个条件，值在某个范围才有秒杀资格，否则直接秒杀失败。
+
+   **在JS中生成一个范围比如：10 - 20 ，然后用户点击秒杀按钮的时候，随机生成一个数字，如果在 10 - 20 的范围内，就有秒杀资格，否则就么有秒杀资格，提示秒杀失败**。 -  一般不用
+
+2. `置灰秒杀按钮`
+
+   比如未到秒杀时间禁用秒杀按钮，点击了秒杀按钮后马上禁用按钮，需要`等n秒才能点击第二次等来减少用户的请求数量`
+
+3. `流量错峰`
+
+   流量错峰就是尽可能的将流量分散到更大范围的时间点，比如`秒杀时加入图片验证码`，或者需要答题，每个人输入图片验证码的时间都不一样，相当于就是把流量分散了 ，也可以延迟秒杀，点击了秒杀按钮，0 - 5 秒后才发送秒杀请求，这样也能流量错峰。
+
+   或者随机延迟发送秒杀请求到后台。
+
+- 后端流控
+
+  前端限流能够减少很少一部分并发，大量的请求还是会打到后端服务器，如果我们的服务器无法应对这么高的并发可能会被流量击垮，保守起见我们可以通过后端限流手段把多余的流量排除在外，那么实实在在参与秒杀的流量又少了很大一部分。`通常会使用Nginx+Lua进行流控。或者在应用层流控，限流的组件常用的有Sentinel、Hystrix等`
+
+- 秒杀预约
+
+  如果预计流量特别大，可以做一个秒杀预约系统，只有`报了名的才有秒杀资格参与秒杀`，这样就可以排除很多用户了。
+
+#### 2.3.恶意防刷
+
+- 秒杀链接加密&隐藏
+
+秒杀地址不能提前暴露，因为有被提前秒杀的风险，即使秒杀逻辑做了秒杀时间判断，如果秒杀地址被暴露，使用程序不停获取最新时间不停刷秒杀接口，那被秒杀到的机率是非常高的，可能所有的商品都被程序秒杀到。那如何实现连接不被暴露呢？可以`把URL动态化，使用MD5加密，通过前端获取URL，后端进行校验`。
+
+- 恶意请求拦截
+
+对于恶意的请求要做拦截处理，否则会给系统带来没必要的流量，这种恶意请求一般是通过程序或脚本不停的发请求，这种情况请求会消耗带宽不说还可能造成缓存击穿，甚至把服务器打崩。可以`使用Ningx+Lua实现`，比如`1个IP 1秒中只允许发送1个请求，或者一个用户ID 1秒钟只能发送1个请求，也对IP地址做一个黑名单，或者对用户做一个黑名单`。
+
+#### 2.4.服务隔离
+
+- 数据库隔离&业务隔离
+
+为了让秒杀有更充足的资源不和别的服务抢占资源，需要将`秒杀系统独立出来`，这里分为：业务独立，服务独立，数据独立，独立的秒杀微服务和独立的数据库，同时秒杀服务也应该具有伸缩性，`可集群`，这样的系统才能支持更高的并发
+
+#### 2.5.秒杀缓存
+
+如果大量请求进来，打到数据库，数据库压力太大
+
+- 库存预热
+
+秒杀设计到库存判断和减库存，通常有“付款减库存”，“下单减库存”和“预减库存”等方式，对于秒杀而言，`如果每次秒杀都需要先去数据库检查库存，然后再扣减库存，然后再保存订单数据，那在高并发请求下数据库是吃不消的`，性能也会特别差，所以这里可以使用“预减库存”方案。
+
+
+
+非关系学数据库的出现就是为了解决传统关系型数据库在性能上的不足，`我们可以把商品库存事先存储到Redis中，每次秒杀商品时去Redis检查库存，同时基于Redis扣减库存，事后可以异步更新到数据库，这里Redis就解决了数据库性能问题`，让秒杀流程变得更高效，但是如果有比较复杂的减库存逻辑，或者需要使用事务，你还是必须在数据库中完成减库存--我们可以考虑用信号量来做
+
+这里还有一个问题，如果是一般的秒杀并发没有太高的话，一个Redis即可，几万的并发还是扛得住，但是如果要支持更高的并发量，那可能一个Redis就吃不消了，可以考虑Redis集群
+
+- 秒杀商品缓存预热
+
+把秒杀的商品相关数据缓存起来，减少和数据库的交流提高响应速度，最好的方案就是把秒杀商品缓存到Redis中，秒杀逻辑从Redis中进行读写。
+
+#### 2.6.消峰&降级
+
+- MQ队列消峰
+
+下单是一个很耗时的工作，除了设计到大量的业务外还要和数据库进行交流，秒杀系统要的就是快，如果一个秒杀请求进来秒杀到商品后需要等待下单流程执行完成之后才返回结果，那这个请求是很耗时的，在高并发请求下系统的吞吐量就会很低，为了提高请求响应速度，可以采用异步下单，当秒杀服务秒杀到商品后，直接往MQ扔一个下单消息后就可以返回消息给用户，提示秒杀成功，而订单服务监听下单消息，获取消息后就执行下单逻辑即可，这样一来秒杀逻辑是非常快速的，因为采用异步下单，秒杀服务不用等待下单完成即可返回结果，同时也起到了一个消除峰值的效果，因为下单消息都在MQ排队呢
+
+- 熔断降级
+
+熔断降级是必须的，如果系统真的顶不住了，不做熔断降级措施可能整个系统都会瘫痪，做了降级至少对故障服务隔离掉，返回兜底数据，不至于服务器直接瘫痪全是500,404什么的。
+
+
+
+
+
