--- a/其他/记录.md
+++ b/其他/记录.md
@@ -2106,5 +2106,248 @@ public void testReadLock7() throws InterruptedException {
 
 
 
+#### 2.7.超卖&少卖
+
+- 超卖问题
+
+这是一个比较重要的话题，在高并发请求下很容易出现超卖，比如三个秒杀服务都判断到还剩1一个库存，三个秒杀服务都去扣减库存，那库存就会被减成-2,这就出现了超卖了。这个问题可以使用分布式锁来解决，让多个服务对库存的扣减操作成原子性。可以`使用Redis的信号量实现`
+
+- 支付超时(少卖问题)
+
+秒杀到商品后即可生成订单号，然后使用该订单号下单，下单采用MQ异步下单，秒杀服务往MQ扔一个小单消息，订单服务作为消费者从MQ取消息然后进行下单。秒杀成功秒杀服务就可以返回，用户即可根据订单号完成支付，支付成功后修改订单状态。那如果用户秒杀到商品后迟迟未支付呢？我们是不是需要为支付超时的订单退回库存呢？
+
+这里可以使用`延迟队列实现`，下单成功后放入一个订单消息到延迟队列A，达到超时时间的消息成为死信消息，消息会通过一个死信交换机转发到另外一个队列B，我们可以指定一个消费者从该队列B中消费消息，判断支付状态如果支付超时，就做退库存操作。
+
+#### 2.8.其他问题
+
+- 网络开销
+
+如果一个请求经过的服务太多注定比较耗时，每一次服务的调用都是网络开销，所以尽可能的减少服务的调用，在上面的秒杀案例流程图中其实网关层可以去掉请求直接使用Nginx负载到秒杀服务，减少网络开销，或者也可以请求直接走网关不走Nginx来减少网络开销，同时数据要少，网络传输尽可能少的数据来提高网络传输速度(select * 的不要)，甚至可以使用压缩传输，当然压缩又会增加CPU的消耗
+
+建构图:
+
+![1638960437555](https://gitee.com/miawei/pic-go-img/raw/master/imgs/1638960437555.png)
 
 
+
+执行流程(理解):
+
+1. 在后台通过定时调度任务将需要秒杀的课程发布到Redis中，使用的是Hash的数据结构进行存储和方便更改；
+
+2. 用户在前台通过redis中展示的秒杀课程进行秒杀，这时为了削减前端的并发那么我们可以采用按钮置灰、验证码来达到一个削峰的目的！
+
+3. 点击秒杀然后就会通过DNS然后使用Lvs+Nginx来达到一个负载均衡限流的作用!
+
+4. 这时就会进入到秒杀集群也就是redis集群中，然后采用的是”预减库存“的这个方案，也就是在进入这个阶段那么我们就采用redisson的信号量来进行解决超卖这个问题，减去库存以后我们就创建一个预创订单放进redis缓存中，然后发送消息到延迟队列中用于判断下单超时退库存的一个问题！
+
+5. 创建好以后我们就将订单号返回给客户端，客户端拿到订单号在订单详情页去发起下单的这个服务，在服务中我们可以将业务单进行入库，那么这个时候就会存在一个极端的问题， 如果用户在将业务单入库的时候这个预创订单过期了退库存了怎么办？
+
+   ```
+   在初创订单这里放入mq过期队列中, 设置时间通过死信交换机和死信队列, 然后我们定义一个消费者去监听死信队列, 在时间到期后根据redis预创订单的key去获取, 如果获取到那么就认为这个订单还没保存到数据库中, 那么我们就退库存! 
+   为什么要放入过期队列中, 因为一旦初创订单那么我就认为这个订单会带给前端,前端就带到订单服务中去保存到数据库中, 那么就会删除redis中的预创订单, 如果在指定时间以内我们还没保存到数据库我们就认为这个订单已经超时了!
+   
+   问题: 在死信队列中如果正在推库存的时候刚好用户点击下单那么此刻怎么办?
+   我们可以让这两个加一个分布式锁 两个只有一个能操作--- redis实现分布式锁
+   我们可以设置消息过期为30分钟,而给用户提示说你还有25分钟支付时间, 那么就会有相差5分钟时间的空档期, 那么我们就可以保证不会出现这个操作了!
+   ```
+
+6. 将订单保存到业务单数据库以后然后还要保存支付单，然后这个时候还要发一个消息到延迟队列，用于判断指定时间内如果用户未支付也就是说可能在支付密码界面就不动了，那么这个时候我们就要去使用MQ消费者去手动取消订单退库存！
+
+7. 返回给客户端订单号，然后请求到支付服务，支付服务就获取支付单创建一个支付流水表，然后根据支付的状态来进行处理，这里还有一个MQ，是用于将支付结果异步通知。比如修改业务单状态然后还要将保存订单所在的课程和用户之间的关系！
+
+Xmid:
+
+![image-20211211192006930](https://gitee.com/miawei/pic-go-img/raw/master/imgs/image-20211211192006930.png)
+
+![image-20211211192021099](https://gitee.com/miawei/pic-go-img/raw/master/imgs/image-20211211192021099.png)
+
+
+
+## 13. BIO&NIO&AIO理解
+
+同步（异步）: 如在A线程中开了一个B线程，那么就得必须等到B线程执行结束才能获取到结果执行后续的代码！这就是同步，反之就不需要等待B线程就可以执行后续的事情！只需要后面通过回调机制来获取B线程的结果即可！
+
+阻塞（非阻塞）：阻塞是指I/O操作需要彻底完成后才能返回用户空间 ，非阻塞是指I/O操作被调用后立即返回一个状态值，无需等I/O操作彻底完成--如使用read读取数据，如果一直读取不到那么就会一直处于等待，这就是阻塞，而非阻塞就反之就不需要等待就可以往后执行！
+
+
+
+BIO：
+
+概念：同步阻塞型IO，该模式是一个请求一个线程并且读取数据是必须获取到数据才能返回否则处于阻塞等待。
+
+优化方案：使用线程池！
+
+缺点：并发大会创建大量的线程，比较占用系统资源！容易造成阻塞等待消耗不必要的线程开销！
+
+优点：程序简单容易理解
+
+
+
+NIO:
+
+概念：同步非阻塞型IO，一个线程处理多个请求，发起的请求会进行一个“多路复用”去处理，一个请求如果获取不到数据那么就不会进行阻塞就会去做其他的一些事情！
+
+
+
+AIO：
+
+概念：NI02.0 是属于异步非阻塞模型，是对NIO的一个增强！
+
+
+
+```
+NIO和BIO的区别:
+1. BIO以流的方式处理数据，NIO以块（buffer）的方式处理数据，块的IO效率高于流的IO效率
+2. BIO是阻塞IO，NIO是非阻塞IO
+3. BIO使用字符流，或者字节流进行操作，而NIO基于channel通道和buffer缓冲区进行操作
+4. BIO适用于并发低的业务场景，NIO适用于并发高的业务场景！
+```
+
+
+
+## 14. Spring事务的传播方式
+
+传播方式主要是指多个事务同时存在时，在Spring如何处理事务, 它们是否需要在同一个事务中运行，一个事务的方法被另外有事务的方法调用时，这个事务应该如何运行；
+
+主要有四种：
+
+1. required: 支持当前事务，当前方法有事务就用当前的事务，没有事务就新建一个。
+
+   ```java
+   @Transactional(propagation = Propagation.REQUIRED,isolation = Isolation.DEFAULT)
+   public int incr(int balance, int id) {
+       //传播方式request
+       int result = studentMapper.updateBalance(balance, id);
+       //新事务
+       studentService.decr(-100, 2);
+       //制造异常引起incr这个事务回滚
+       int i = 1/0;
+       return result ;
+   }
+   @Transactional(propagation = Propagation.REQUIRED,isolation = Isolation.DEFAULT,rollbackFor = Throwable.class)
+   public int decr(int balance, int id){
+       int result = studentMapper.updateBalance(balance, id);
+       return result ;
+   }
+   结果:decr加入到了incr这个事务中,incr回滚导致decr也回滚
+   ```
+
+   理解：就是说“decr”这个事务就加入到incr这个事务，如果incr有事务那么就用当前的事务，如果没有就新建一个，总之就保持在同一个事务中运行！
+
+2. required_new: 不管当前有没有事务，都新建一个事务，用自己的事务
+
+   ```java
+   //表示不管是否存在事务，都创建一个新的事务，原来的事务挂起，新的事务执行完毕，继续执行老的事务；
+   @Transactional(propagation = Propagation.REQUIRED,isolation = Isolation.DEFAULT)
+   public int incr(int balance, int id) {
+       //传播方式request
+       int result = studentMapper.updateBalance(balance, id);
+   
+       //新事务
+       studentService.decr(-100, 2);
+       //制造异常
+       int i = 1/0;
+       return result ;
+   }
+   
+   /** 转出 */
+   @Transactional(propagation = Propagation.REQUIRES_NEW,isolation = Isolation.DEFAULT,rollbackFor = Throwable.class)
+   public int decr(int balance, int id) {
+       int result = studentMapper.updateBalance(balance, id);
+       return result ;
+   }
+   //结果:而结果是decr这个事务不会被incr影响,最终导致"增加"这个事务回滚,"减少"这个事务会正常提交
+   ```
+
+   理解：“减少”这个事务不管你“增加”这个事务是否有事务，那么我都会新建一个事务然后执行，等待我执行完毕再执行你这个“新增”的事务，那么这种我感觉就纯粹两个事务了，因为这就是分开了，“增加”这个事务遇到异常会进行回滚而”减少“这个事务本身没有异常那么正常提交！
+
+3. supports: 当前有事务则用当前事务，没有事务就不用回滚
+
+   ```java
+   //表示如果当前存在事务，就加入该事务；如果当前没有事务，那就不使用事务；
+   /** 转入 */
+   @Override
+   public int incr(int balance, int id) {//没有事务
+       //传播方式request
+       int result = studentMapper.updateBalance(balance, id);
+   
+       //新事务
+       studentService.decr(-100, 2);
+       int i = 1/0;
+       return result ;
+   }
+   
+   /** 转出 */
+   @Transactional(propagation = Propagation.SUPPORTS,
+                  isolation = Isolation.DEFAULT,
+                  rollbackFor = Throwable.class)
+   public int decr(int balance, int id) /*throws SQLException */{
+       int result = studentMapper.updateBalance(balance, id);
+   
+       //throw new SQLException("SQL异常");
+       return result ;
+   }
+   结果:incr 和 decr都没有事务,即使报了异常,也都操作成功了,反之我们给incr设上事务
+   ```
+
+   其他测试:
+
+   ```java
+   @Transactional(propagation = Propagation.REQUIRED,isolation = Isolation.DEFAULT )
+   public int incr(int balance, int id) {
+       //传播方式request
+       int result = studentMapper.updateBalance(balance, id);
+   
+       //新事务
+       studentService.decr(-100, 2);
+       int i = 1/0;
+       return result ;
+   }
+   
+   /** 转出 */
+   @Override
+   @Transactional(propagation = Propagation.SUPPORTS,isolation = Isolation.DEFAULT,rollbackFor = Throwable.class)
+   public int decr(int balance, int id) /*throws SQLException */{
+       int result = studentMapper.updateBalance(balance, id);
+   
+       //throw new SQLException("SQL异常");
+       return result ;
+   }
+   //结果:是decr进入了incr这个事务,两者都回滚了,对数据库没有影响
+   ```
+
+4. not_supports: 以非事务运行，存在事务则将事务挂起，就是不用事务！
+
+   ```java
+   //表示不使用事务；如果当前存在事务，就把当前事务暂停，以非事务方式执行；
+   /** 转入 */
+   public int incr(int balance, int id) {
+       //传播方式request
+       int result = studentMapper.updateBalance(balance, id);
+   
+       //新事务
+       studentService.decr(-100, 2);
+       int i = 1/0;
+       return result ;
+   }
+   
+   /** 转出 */
+   @Transactional(propagation = Propagation.NOT_SUPPORTED,isolation = Isolation.DEFAULT,rollbackFor = Throwable.class)
+   public int decr(int balance, int id) /*throws SQLException */{
+       int result = studentMapper.updateBalance(balance, id);
+   
+       //throw new SQLException("SQL异常");
+       return result ;
+   }
+   //结果:是两者都没了事务,抛异常没有影响
+   ```
+
+   
+
+剩下三种：不常用：
+
+5. Never: 以非事务方式运行，就是不用事务，如当前存在事务则抛出异常
+6. Nested: 如果当前存在事务，则在嵌套事务内执行，如果当前没有事务，则新建一个事务
+7. Mandatory: 支持当前事务，如果当前没有事务，就抛出异常。
+
+ 
