--- a/其他/小记录.md
+++ b/其他/小记录.md
@@ -27,3 +27,28 @@
 使用JDK1.8的CompletableFuture这个可以同时执行线程任务最后进行合并
 
 这是相关介绍链接：https://mp.weixin.qq.com/s/MhdR5cI_-SDSZeg1SYnlOg
+
+> @JsonIngnore忽略返回字段
+
+在需要返回的Vo类中的字段上定义该注解，可以忽略序列化让前端拿到指定的一些字段，这是定义@JsonIngnore需要用到的依赖：
+
+```xml
+<!--Jackson required包-->
+<dependency>
+    <groupId>com.fasterxml.jackson.core</groupId>
+    <artifactId>jackson-core</artifactId>
+    <version>2.11.2</version>
+</dependency>
+<dependency>
+    <groupId>com.fasterxml.jackson.core</groupId>
+    <artifactId>jackson-databind</artifactId>
+    <version>2.11.2</version>
+</dependency>
+<dependency>
+    <groupId>com.fasterxml.jackson.core</groupId>
+    <artifactId>jackson-annotations</artifactId>
+    <version>2.11.2</version>
+</dependency>
+```
+
+记录: 我尝试用fastJson的`@JSONField(serialize = false)`来忽略字段来反应来看就是无效的!但是实测这个@JsonIngnore有效的!
